# rustorrent

./: Cargo.toml
.github/: dependabot.yml
.github/workflows/: main.yml
parser/: Cargo.toml  readme.md
parser/src/: lib.rs
parser/src/file/: mod.rs  v1.rs  v2.rs  v2hybrid.rs
parser/src/magnet/: mod.rs
